--- a/WEB/contactanos.html
+++ b/WEB/contactanos.html
@@ -2,33 +2,33 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="estilos.css" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" >
+  <link rel="preconnect" href="https://fonts.googleapis.com" >
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" >
+  <link rel="preconnect" href="https://fonts.googleapis.com" >
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" >
+  <link rel="stylesheet" href="estilos.css" >
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <meta name="description"
     content="Power of love esun gimnasio con más de 25 años de experiencia en el mercado. Originada en el barrio de Palermo, Buenos Aires">
   <meta name="keywords" content="gimnasio, Gym, Fitness">
 
-  <link rel="stylesheet" href="galeria.html" />
+  <link rel="stylesheet" href="galeria.html" >
   <!-- titulo -->
   <title lang="en">Contactanos</title>
 
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="img/logo.ico" />
+  <link rel="icon" type="image/x-icon" href="img/logo.ico" >
 
   <!-- favicon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
   <!--Estilos bootstraps-->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" >
   <!-- Estilos locales -->
-  <link rel="stylesheet" type="text/css" href="./css/Style.css" />
+  <link rel="stylesheet" type="text/css" href="./css/Style.css" >
 </head>
 
 <body>
@@ -115,9 +115,9 @@
       <form class="form-group pt-5">
 
         <div class="text-left ">
-          <h4 htmlFor="Email">Suscribite a nuestro newsletter!!</h4>
+          <h4 href="Email">Suscribite a nuestro newsletter!!</h4>
           <div class=" m-2">
-            <input name="Email" type="email" class="form-control-md mr-2 p-2" placeholder="Escribe tu email" required />
+            <input name="Email" type="email" class="form-control-md mr-2 p-2" placeholder="Escribe tu email" required >
             <button class="btn btn-secondary p-2">Suscribirme!</button>
           </div>
         </div>
