--- a/WEB/index.html
+++ b/WEB/index.html
@@ -138,7 +138,7 @@
     <form class="form-group pt-5">
 
       <div class="text-left ">
-        <h4 href="Email">Suscribite a nuestro newsletter!!</h4>
+        <h4 >Suscribite a nuestro newsletter!!</h4>
         <div class=" m-2">
           <input name="Email" type="email" class="form-control-md mr-2 p-2" placeholder="Escribe tu email" required >
           <button class="btn btn-secondary p-2">Suscribirme!</button>
