--- a/WEB/contactanos.html
+++ b/WEB/contactanos.html
@@ -2,33 +2,33 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" >
-  <link rel="preconnect" href="https://fonts.googleapis.com" >
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" >
-  <link rel="preconnect" href="https://fonts.googleapis.com" >
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" >
-  <link rel="stylesheet" href="estilos.css" >
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="estilos.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Power of love esun gimnasio con más de 25 años de experiencia en el mercado. Originada en el barrio de Palermo, Buenos Aires">
   <meta name="keywords" content="gimnasio, Gym, Fitness">
 
-  <link rel="stylesheet" href="galeria.html" >
+  <link rel="stylesheet" href="galeria.html">
   <!-- titulo -->
   <title lang="en">Contactanos</title>
 
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="img/logo.ico" >
+  <link rel="icon" type="image/x-icon" href="img/logo.ico">
 
   <!-- favicon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Estilos bootstraps-->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" >
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <!-- Estilos locales -->
-  <link rel="stylesheet" type="text/css" href="./css/Style.css" >
+  <link rel="stylesheet" type="text/css" href="./css/Style.css">
 </head>
 
 <body>
@@ -79,7 +79,7 @@
 
       <!-- Map -->
       <div class="card dontShowOnmobile showOnTablet ">
-        <iframe class="map" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+        <iframe class="map" height="450"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52990.39194257439!2d-60.78207951906688!3d-32.90147797007806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b652ea3d7cf74b%3A0x908de900412efa00!2sEstaci%C3%B3n%20Club%20Fisherton!5e0!3m2!1sen!2sar!4v1669331465401!5m2!1sen!2sar"
           width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
@@ -87,7 +87,7 @@
       <!-- contact inputs -->
       <div class="Formulariocontacto">
         <h2>Contactate!!</h2>
-        <article>
+        <div>
           <div class="d-flex justify-content-start">
           </div>
           <div>
@@ -104,87 +104,87 @@
                 <button class="btn btn-dark mt-3 " id="sendLetter">Enviar</button>
               </div>
             </div>
-        </article>
+          </div>
+        </div>
+
+
       </div>
 
+      <footer class="bg-dark text-light text-center">
 
-    </div>
+        <form class="form-group pt-5">
 
-    <footer class="bg-dark text-light text-center">
+          <div class="text-left ">
+            <h4>Suscribite a nuestro newsletter!!</h4>
+            <div class=" m-2">
+              <input name="Email" type="email" class="form-control-md mr-2 p-2" placeholder="Escribe tu email" required>
+              <button class="btn btn-secondary p-2">Suscribirme!</button>
+            </div>
+          </div>
 
-      <form class="form-group pt-5">
+        </form>
 
-        <div class="text-left ">
-          <h4 >Suscribite a nuestro newsletter!!</h4>
-          <div class=" m-2">
-            <input name="Email" type="email" class="form-control-md mr-2 p-2" placeholder="Escribe tu email" required >
-            <button class="btn btn-secondary p-2">Suscribirme!</button>
+        <div class="d-flex flex-wrap justify-content-around pb-4">
+
+          <!-- hyperlinks -->
+          <div class="text-start">
+            <div>
+              <a class="text-decoration-none  text-start text-light" href="./actividades.html">Actividades</a>
+            </div>
+            <div>
+              <a class="text-decoration-none  text-start text-light" href="./Quienes_somos.html">Nosotros</a>
+            </div>
+            <div>
+              <a class="text-decoration-none  text-start text-light" href="./contactanos.html">Contacto</a>
+            </div>
+            <div>
+              <a class="text-decoration-none  text-start text-light" href="./Galeria.html">Galeria</a>
+            </div>
+          </div>
+
+
+
+          <!-- iconos -->
+          <div class="">
+            <!-- instagram -->
+            <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
+              class="d-flex justify-content-center  text-decoration-none">
+              <div>
+                <img src="img/icono_instagram.png" class='img-fluid' width='24' alt="instagram">
+              </div>
+              <p class="text-light ms-1">
+                instagram
+              </p>
+            </a>
+            <!-- facebook -->
+            <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
+              class="d-flex justify-content-center  text-decoration-none">
+              <div>
+                <img src="img/icono_facebook.png" class='img-fluid' width='24' alt="facebook">
+              </div>
+              <p class="text-light ms-1">
+                facebook
+              </p>
+            </a>
+            <!-- twitter -->
+            <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
+              class="d-flex justify-content-center  text-decoration-none">
+              <div>
+                <img src="img/icono_twiter.png" class='img-fluid' width='24' alt="twitter">
+              </div>
+              <p class="text-light ms-1">
+                twitter
+              </p>
+            </a>
           </div>
         </div>
 
-      </form>
-
-      <div class="d-flex flex-wrap justify-content-around pb-4">
-
-        <!-- hyperlinks -->
-        <div class="text-start">
-          <div>
-            <a class="text-decoration-none  text-start text-light" href="./actividades.html">Actividades</a>
-          </div>
-          <div>
-            <a class="text-decoration-none  text-start text-light" href="./Quienes_somos.html">Nosotros</a>
-          </div>
-          <div>
-            <a class="text-decoration-none  text-start text-light" href="./contactanos.html">Contacto</a>
-          </div>
-          <div>
-            <a class="text-decoration-none  text-start text-light" href="./Galeria.html">Galeria</a>
-          </div>
-        </div>
-
-
-
-        <!-- iconos -->
-        <div class="">
-          <!-- instagram -->
-          <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
-            class="d-flex justify-content-center  text-decoration-none">
-            <div>
-              <img src="img/icono_instagram.png" class='img-fluid' width='24' alt="instagram">
-            </div>
-            <p class="text-light ms-1">
-              instagram
-            </p>
-          </a>
-          <!-- facebook -->
-          <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
-            class="d-flex justify-content-center  text-decoration-none">
-            <div>
-              <img src="img/icono_facebook.png" class='img-fluid' width='24' alt="facebook">
-            </div>
-            <p class="text-light ms-1">
-              facebook
-            </p>
-          </a>
-          <!-- twitter -->
-          <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
-            class="d-flex justify-content-center  text-decoration-none">
-            <div>
-              <img src="img/icono_twiter.png" class='img-fluid' width='24' alt="twitter">
-            </div>
-            <p class="text-light ms-1">
-              twitter
-            </p>
-          </a>
-        </div>
-      </div>
-
-      <!-- disclaimer -->
-      <p class="m-0 pb-4">
-        Copyright (c) 2022 Power of love. Autor de este documento: Prati
-        Cecilia.- Rosario - Argentina
-      </p>
-    </footer>
+        <!-- disclaimer -->
+        <p class="m-0 pb-4">
+          Copyright (c) 2022 Power of love. Autor de este documento: Prati
+          Cecilia.- Rosario - Argentina
+        </p>
+      </footer>
   </main>
   <script src="./js/bootstrap.js"></script>
 </body>
