--- a/WEB/contactanos.html
+++ b/WEB/contactanos.html
@@ -79,7 +79,7 @@
 
       <!-- Map -->
       <div class="card dontShowOnmobile showOnTablet ">
-        <iframe class="map" height="450"
+        <iframe class="map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52990.39194257439!2d-60.78207951906688!3d-32.90147797007806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b652ea3d7cf74b%3A0x908de900412efa00!2sEstaci%C3%B3n%20Club%20Fisherton!5e0!3m2!1sen!2sar!4v1669331465401!5m2!1sen!2sar"
           width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
