--- a/WEB/contactanos.html
+++ b/WEB/contactanos.html
@@ -93,9 +93,9 @@
           <div>
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Escribe tu nombre">
-              <p>
+              <div class="my-2">
                 <input type="email" class="form-control" placeholder="Escribe tu email">
-              </p>
+              </div>
               <div>
                 <textarea class="form-control" rows="8" cols="8" placeholder="Escríbenos un mensaje! "></textarea>
               </div>
