--- a/WEB/actividades.html
+++ b/WEB/actividades.html
@@ -43,7 +43,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Quienes_somos.html">Nosotros</a>
@@ -55,7 +55,7 @@
                 <a class="nav-link" href="./Galeria.html">Galeria</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./actividades.html">Actividades</a>
+                <a class="nav-link active" href="./actividades.html">Actividades</a>
               </li>
 
             </ul>
