--- a/WEB/contactanos.html
+++ b/WEB/contactanos.html
@@ -47,13 +47,13 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Quienes_somos.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contactanos.html">Contacto</a>
+                <a class="nav-link active" href="./contactanos.html">Contacto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Galeria.html">Galeria</a>
